# openhands-aci

./: pyproject.toml  test.py
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  py-mem-profiling.yml
openhands_aci/editor/: __init__.py  audio.py  diff_editor.py  editor.py  exceptions.py  file_cache.py  gemini_editor.py  history.py  md_converter.py  mdconvert.py  navigator.py  prompts.py  results.py  speech_recognition.py
openhands_aci/indexing/locagent/: compress.py  tools.py
openhands_aci/indexing/locagent/repo/chunk_index/: test.py
openhands_aci/indexing/locagent/repo/chunk_index/codeblocks/parser/: parser.py  python.py
openhands_aci/indexing/locagent/repo/chunk_index/index/: epic_split.py
openhands_aci/linter/impl/: treesitter.py
openhands_aci/linter/languages/: python.py
openhands_aci/utils/: audio.py  diff.py  shell.py
tests/: test_encoding.py
tests/fixtures/: __init__.py  cp1251_sample.py
tests/integration/: test_file_editor.py  test_oh_editor.py
tests/integration/editor/: test_audio_integration.py  test_directory_read.py  test_error_handling.py  test_file_validation.py  test_non_utf8_operations.py  test_peak_memory.py  test_view_supported_binary_files.py
tests/integration/indexing/: test_repo_parser.py
tests/unit/: test_encoding.py  test_exceptions.py  test_file_validation.py  test_history.py  test_shell_utils.py
tests/unit/editor/: test_file_cache.py  test_gemini_editor.py  test_md_converter.py
tests/unit/indexing/: test_repo_parser.py
tests/unit/utils/: test_audio.py
