[tool.poetry]
name = "openhands-aci"
version = "0.2.5"
description = "An Agent-Computer Interface (ACI) designed for software development agents OpenHands."
authors = ["OpenHands"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "openhands_aci/**/*" }
]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "*"
pandas = ">=2.2.3"
scipy = "*"
networkx = "*"
litellm = "*"
gitpython = "*"
tree-sitter = "^0.24.0"
tree-sitter-python = "^0.23.6"
tree-sitter-javascript = "^0.23.1"
tree-sitter-typescript = "^0.23.2"
tree-sitter-ruby = "^0.23.1"
grep-ast = "0.3.3"
flake8 = "*"
whatthepatch = "^1.0.6"
binaryornot = "^0.4.4"
beautifulsoup4 = ">=4.12.3"
google-search-results = ">=2.4.2"
mammoth = ">=1.8.0"
markdownify = ">=0.13.1"
numexpr = ">=2.10.1"
pathvalidate = ">=3.2.1"
pdfminer-six = ">=20240706"
pillow = ">=11.0.0"
puremagic = ">=1.28"
pypdf = ">=5.1.0"
python-dotenv = ">=1.0.1"
python-pptx = "^1.0.2"
requests = ">=2.32.3"
serpapi = ">=0.1.5"
tqdm = ">=4.66.4"
youtube-transcript-api = ">=0.6.2"
chess = "^1.11.1"
sympy = "^1.13.3"
pubchempy = "^1.0.4"
bio = "^1.7.1"
scikit-learn = "^1.6.1"
pydub = "^0.25.1"
pypdf2 = "^3.0.1"
xlrd = "^2.0.1"
speechrecognition = "^3.14.1"
openpyxl = "^3.1.5"




[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pre-commit = "^4.0.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
psutil = "^5.9.8"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff.lint]
select = ["D"]
# ignore warnings for missing docstrings
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"
