[tool.poetry]
name = "openhands-aci"
version = "0.3.1"
description = "An Agent-Computer Interface (ACI) designed for software development agents OpenHands."
authors = ["OpenHands"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "openhands_aci/**/*" }
]

[tool.poetry.dependencies]
python = "^3.12"
# Core editor dependencies
binaryornot = "^0.4.4"
cachetools = "^5.5.2"
charset-normalizer = "^3.4.1"
pydantic = "^2.11.3"

# Document processing dependencies (part of core editor functionality)
beautifulsoup4 = ">=4.12.3"
mammoth = ">=1.8.0"
markdownify = ">=0.13.1"
pdfminer-six = ">=20240706"
puremagic = ">=1.28"
pypdf = ">=5.1.0"
python-pptx = "^1.0.2"
requests = ">=2.32.3"
youtube-transcript-api = ">=0.6.2"
pydub = "^0.25.1"
pypdf2 = "^3.0.1"
xlrd = "^2.0.1"
speechrecognition = "^3.14.1"
openpyxl = "^3.1.5"

# Optional dependencies for linting functionality
tree-sitter = { version = "^0.24.0", optional = true }
tree-sitter-language-pack = { version = "0.7.3", optional = true }
grep-ast = { version = "^0.9.0", optional = true }
flake8 = { version = "*", optional = true }

# Optional dependencies for utils functionality
whatthepatch = { version = "^1.0.6", optional = true }

# Optional dependencies for indexing functionality
pandas = { version = "*", optional = true }
matplotlib = { version = "^3.10.3", optional = true }
networkx = { version = "^3.4.2", optional = true }
gitpython = { version = "*", optional = true }
libcst = { version = "1.5.0", optional = true }
rapidfuzz = { version = "^3.13.0", optional = true }

# Optional dependencies for llama-index functionality
llama-index = { version = "^0.12.29", optional = true }
llama-index-core = { version = "^0.12.29", optional = true }
llama-index-retrievers-bm25 = { version = "^0.5.2", optional = true }

[tool.poetry.extras]
linting = [
    "tree-sitter", "tree-sitter-language-pack", "grep-ast", "flake8"
]
utils = [
    "whatthepatch"
]
indexing = [
    "pandas", "matplotlib", "networkx", "gitpython", "libcst", "rapidfuzz"
]
llama = ["llama-index", "llama-index-core", "llama-index-retrievers-bm25"]
all = [
    "tree-sitter", "tree-sitter-language-pack", "grep-ast", "flake8",
    "whatthepatch", "pandas", "matplotlib", "networkx", "gitpython", 
    "libcst", "rapidfuzz", "llama-index", "llama-index-core", 
    "llama-index-retrievers-bm25"
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"
pre-commit = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.3"
psutil = "^5.9.8"
pytest-forked = "*"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.autopep8]
# autopep8 fights with mypy on line length issue
ignore = [ "E501" ]

[tool.black]
# prevent black (if installed) from changing single quotes to double quotes
skip-string-normalization = true

[tool.ruff.lint]
select = ["D"]
# ignore warnings for missing docstrings
ignore = ["D1"]

[tool.ruff.lint.pydocstyle]
convention = "google"
